--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,6 +198,7 @@ body {
 }
 
 .personal-item {
+  position: relative;
   display: flex;
   align-items: center;
 }
@@ -265,6 +266,7 @@ body {
 }
 
 .baskets {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -275,6 +277,170 @@ body {
   line-height: normal;
   border-radius: 100%;
   background-color: #ffffff;
+}
+
+/* Popover */
+
+.popover {
+  display: none;
+  position: absolute;
+  top: 37px;
+  right: -77px;
+  width: 320px;
+  min-height: 173px;
+  z-index: 5;
+  color: #ffffff;
+  background-color: #000000;
+}
+
+.popover-open {
+  display: block;
+}
+
+.popover::before {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 6px;
+  top: -6px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-image: url("../images/modal/triangle.svg");
+}
+
+.popover-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding-bottom: 20px;
+}
+
+.cart-items-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.cart-item {
+  display: flex;
+  padding: 19px 20px;
+}
+
+.cart-item:not(:last-child) {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.cart-link {
+  display: flex;
+  margin-right: auto;
+  text-decoration: none;
+  color: #FFFFFF;
+  font-family: "Rubik", sans-serif;
+  line-height: 20px;
+}
+
+.cart-link:focus {
+  outline-offset: 2px;
+  outline: 2px solid #af4fff;
+}
+
+.cart-link:hover {
+  opacity: 0.6;
+}
+
+.cart-link:active {
+  opacity: 0.3;
+}
+
+.cart-image {
+  display: block;
+  margin-right: 23px;
+}
+
+.cart-name {
+  margin: 0;
+  width: 150px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.cart-button {
+  padding: 0;
+  width: 10px;
+  height: 10px;
+  background-image: url(../images/modal/cross.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.cart-button:focus {
+  outline-offset: 2px;
+  outline: 2px solid #af4fff;
+}
+
+.cart-button:hover {
+  opacity: 0.6;
+}
+
+.cart-button:active {
+  opacity: 0.3;
+}
+
+.cart-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 8px 20px;
+  margin-bottom: 20px;
+  background-color: #1a1a1a;
+}
+
+.cart-text {
+  margin: 0;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.popover-open-button {
+  display: block;
+  width: 280px;
+  margin: 0 20px;
+  padding: 14px;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: normal;
+  letter-spacing: 3.6px;
+  text-transform: uppercase;
+  color: #000000;
+  background-color: #ffffff;
+  border: none;
+  text-decoration: none;
+}
+
+.popover-open-button:focus {
+  outline-offset: 2px;
+  outline: 2px solid #af4fff;
+}
+
+.popover-open-button:hover {
+  background-color: #ffe17f;
+}
+
+.popover-open-button:active {
+  background-color: #ffe17f;
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.popover-open-button:disabled {
+  opacity: 0.1;
 }
 
 .navigation {
@@ -303,9 +469,9 @@ body {
   color: #000000;
 }
 
-/**/
+/* Submenu */
+
 .has-submenu {
-  display: block;
   position: relative;
   margin-right: auto;
 }
@@ -352,6 +518,16 @@ body {
 
 .navigation-menu-item-button {
   outline: none;
+}
+
+.has-submenu:focus-within .submenu {
+  display: block;
+  flex-direction: column;
+
+}
+
+.has-submenu:focus-within .submenu {
+  display: flex;
 }
 
 .submenu {
@@ -1615,7 +1791,6 @@ body {
   background-color: transparent;
   border: none;
   appearance: textfield;
-  transition: all 0.2s ease-in-out;
 }
 
 .input-price-up {
@@ -2088,4 +2263,331 @@ body {
 
 .catalog-pagination-link-current {
   opacity: 0.6;
+}
+
+/* Modal */
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(240, 240, 240, 0.9);
+  z-index: 5;
+}
+
+.modal {
+  position: relative;
+  width: 920px;
+  min-height: 568px;
+  margin: auto;
+  padding: 72px 80px;
+  background-color: #ffffff;
+  border: 10px solid #000000;
+  box-shadow: 0 10px 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.modal-title {
+  margin: 0;
+  margin-bottom: 42px;
+}
+
+.modal-close-button {
+  position: absolute;
+  content: "";
+  top: 84px;
+  right: 80px;
+  width: 26px;
+  height: 26px;
+  background-image: url("../images/modal/modal-close.svg");
+  background-repeat: no-repeat;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.modal-close-button:hover {
+  opacity: 0.6;
+}
+
+.modal-close-button:focus {
+  opacity: 1;
+  outline: 2px solid #af4fff;
+}
+
+.modal-close-button:active {
+  opacity: 0.3;
+  outline: none;
+}
+
+.modal-form {
+  display: flex;
+  align-items: end;
+  flex-wrap: wrap;
+  width: 760px;
+}
+
+.modal-group {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  margin-bottom: 42px;
+  padding: 0;
+  border: none;
+}
+
+.modal-group:nth-child(2n+1) {
+  margin-right: 40px;
+}
+
+.modal-label {
+  color: #000000;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: -0.36px;
+  max-width: 360px;
+  margin-bottom: 14px;
+}
+
+.modal-help {
+  color: #000000;
+  font-size: 14px;
+  line-height: 20px;
+  max-width: 360px;
+}
+
+.modal-error {
+  color: #FF3D3D;
+}
+
+.modal-label-tooltip {
+  margin-right: 8px;
+}
+
+.modal-input {
+  color: #000000;
+  font-size: 16px;
+  line-height: 20px;
+  width: 360px;
+  height: 60px;
+  padding: 20px 40px 20px 20px;
+  background-color: #f0f0f0;
+  border: none;
+  background-repeat: no-repeat;
+  background-position: top 24px right 20px;
+}
+
+.modal-input:hover {
+  background-color: #dcdcdc;
+}
+
+.modal-input:focus {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+  z-index: 2;
+}
+
+.modal-input:disabled {
+  outline: none;
+  opacity: 0.3;
+}
+
+.modal-input:disabled:hover {
+  background-color: #f0f0f0;
+}
+
+.modal-input-name {
+  background-image: url("../images/modal/modal-user.svg");
+}
+
+.modal-input-email {
+  background-image: url("../images/modal/modal-mail.svg");
+}
+
+.modal-input-name-invalid {
+  outline: 2px solid #FF3D3D;
+  outline-offset: 0;
+}
+
+.modal-input-delivery {
+  width: 540px;
+}
+
+.tooltip-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 180px;
+}
+
+.tooltip-button {
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  border: none;
+  background-image: url("../images/modal/modal-tooltip.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #FFE17F;
+  cursor: pointer;
+}
+
+.tooltip-button:focus {
+  outline: none;
+}
+
+.tooltip-text {
+  display: none;
+  position: absolute;
+  top: 35px;
+  left: -19px;
+  width: 200px;
+  height: 160px;
+  padding: 19px;
+  background-color: #000000;
+  color: #ffffff;
+  box-shadow: 0 10px 0 0 rgba(0, 0, 0, 0.1);
+  font-size: 16px;
+  line-height: 20px;
+  z-index: 3;
+}
+
+.tooltip-text::before {
+  position: absolute;
+  content: "";
+  top: -6px;
+  right: 40px;
+  width: 14px;
+  height: 6px;
+  background-image: url("../images/modal/triangle.svg");
+  background-repeat: no-repeat;
+}
+
+.tooltip-button:hover + .tooltip-text,
+.tooltip-button:focus + .tooltip-text {
+  display: block;
+}
+
+.quantity-container {
+  display: flex;
+}
+
+.quantity-button {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border: none;
+  cursor: pointer;
+  background-color: #f0f0f0;
+}
+
+.quantity-button::before {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 16px;
+  height: 2px;
+  background-color: #000000;
+}
+
+.max-button::after {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(90deg);
+  width: 16px;
+  height: 2px;
+  background-color: #000000;
+}
+
+.quantity-button:hover {
+  background-color: #ebebeb;
+}
+
+.quantity-button:hover::before,
+.quantity-button:hover::after,
+.quantity-button:active::before,
+.quantity-button:active::after {
+  background-color: #969696;
+}
+
+.quantity-button:focus {
+  background-color: #f0f0f0;
+  outline: 2px solid #af4fff;
+  z-index: 3;
+}
+
+.quantity-button:active {
+  background-color: #f0f0f0;
+  outline: none;
+}
+
+.quantity-button:disabled {
+  background-color: #fbfbfb;
+  cursor: default;
+}
+
+.quantity-button:disabled::before,
+.quantity-button:disabled::after {
+  background-color: #e5e5e5;
+}
+
+.quantity-button:disabled:hover::before,
+.quantity-button:disabled:hover::after {
+  background-color: #e5e5e5;
+}
+
+.quantity-input {
+  width: 60px;
+  height: 60px;
+  padding: 20px 10px;
+  text-align: center;
+}
+
+.send-button {
+  width: 220px;
+  background-color: transparent;
+  border: none;
+  z-index: 1;
+}
+
+.send-button:hover {
+  background-color: #FFE17F;
+}
+
+.send-button:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.send-button:active {
+  background-color: #FFCC33;
+}
+
+.send-button::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  background-color: #FFE17F;
+}
+
+.send-button:active::before {
+  background-color: #FFCC33;
+}
+
+.send-button:disabled {
+  opacity: 0.3;
+}
+
+.send-button:disabled::before {
+  opacity: 0.3;
 }
