--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,9 +104,15 @@ body {
 .header-container {
   display: grid;
   grid-template-columns: 517px 1fr;
-  gap: 30px 26px;
+  gap: 29px 26px;
   padding: 20px 60px 0 60px;
-  background-image: linear-gradient( to bottom, #ffffff 20%, #FFE17F 20%, #ffe17f 77%);
+  background-image: linear-gradient( to bottom, #ffffff 19%, #FFE17F 19%, #ffe17f 77%);
+}
+
+.header-container-inner {
+  padding: 20px 60px 14px 60px;
+  margin-bottom: 35px;
+  background-image: linear-gradient( to bottom, #ffffff 17.5%, #FFE17F 17.5%, #ffe17f 77%);
 }
 
 .logo {
@@ -453,8 +459,8 @@ body {
   gap: 44px;
   margin: 0;
   padding: 0;
-  padding-top: 2px;
   list-style: none;
+  width: calc(100% + 3px);
 }
 
 .personal-link:focus, .navigation-menu-link:focus {
@@ -474,17 +480,20 @@ body {
 /* Submenu */
 
 .has-submenu {
+  display: flex;
+  align-items: center;
   position: relative;
   margin-right: auto;
 }
 
 .has-submenu-link {
-  padding: 15px 57px 15px 0;
+  padding: 13px 57px 15px 0;
 }
 
 .navigation-menu-item-button {
   position: relative;
-  right: 44px;
+  right: 40px;
+  top: -2px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -538,6 +547,7 @@ body {
   gap: 18px 30px;
   position: absolute;
   left: -60px;
+  top: 51.5px;
   z-index: 10;
   width: 1160px;
   height: 162px;
@@ -623,14 +633,14 @@ body {
   max-width: 100%;
   height: auto;
   object-fit: contain;
-  margin-top: -3%;
+  margin-top: -4%;
 }
 
 .slider-button-wrapper {
   display: flex;
   justify-content: space-between;
   position: absolute;
-  top: 193px;
+  top: 34.5%;
   padding-left: 30px;
   width: 100%;
 }
@@ -669,13 +679,14 @@ body {
   position: relative;
   z-index: 1;
   margin: 0;
-  margin-top: 104px;
+  margin-top: 79px;
   margin-bottom: 29px;
 }
 
 .slider-description-wrapper {
   position: relative;
   width: 560px;
+  padding-top: 20px;
 }
 
 .slider-description-wrapper::before {
@@ -683,7 +694,7 @@ body {
   content: "";
   width: 250px;
   height: 135px;
-  top: 65px;
+  top: 60px;
   right: 49px;
   color: #FFFFFF;
   text-align: right;
@@ -825,6 +836,7 @@ body {
   gap: 40px;
   margin: 0;
   padding: 0;
+  padding-top: 1px;
   list-style: none;
 }
 
@@ -1349,20 +1361,22 @@ body {
 
 .subscribe {
   background-color: #F0F0F0;
-  padding-top: 64px;
-  padding-bottom: 56px;
+  /*padding-top: 64px;
+  padding-bottom: 56px;*/
 }
 
 .subscribe-container {
   display: flex;
   flex-wrap: wrap;
-  padding: 64px 133px 56px 0;
+  padding-top: 63px;
+  padding-bottom: 52px;
 }
 
 .subscribe-title  {
   width: 348px;
   margin: 0;
   margin-bottom: 144px;
+  margin-left: 7px;
 }
 
 .subscribe-text {
@@ -1370,10 +1384,12 @@ body {
   margin: 0;
   margin-top: 10px;
   margin-left: auto;
+  padding-left: 7px;
 }
 
 .subscribe-form {
   display: flex;
+  height: 56px;
 }
 
 .subscribe-input {
@@ -1404,7 +1420,7 @@ body {
 
 .subscribe-button {
   width: 253px;
-  padding: 18px 39px;
+  padding: 14px 38px;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 800;
@@ -1440,7 +1456,7 @@ body {
   align-items: center;
   gap: 16px;
   margin-left: auto;
-  margin-right: 8px;
+  margin-top: 13px;
 }
 
 .subscribe-note::before {
@@ -1465,12 +1481,13 @@ body {
 
 .footer-logo-wrapper {
   width: 239px;
-  margin-right: 119px;
-}
+  margin-right: auto;
+  }
 
 .footer-logo-wrapper .logo {
   display: block;
-  margin-bottom: 35px;
+  padding-left: 1px;
+  margin-bottom: 25px;
 }
 
 .footer-contacts-address-text {
@@ -1480,22 +1497,36 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+  letter-spacing: -0.08px;
   color: #ffffff;
+}
+
+.footer-contacts-address-text::after {
+  content: "";
+  display: block;
+  margin-top: 64px;
+  margin-left: 1px;
+  width: 80px;
+  height: 7px;
+  background-color: #ffc700;
 }
 
 .footer-menu-wrapper {
   display: flex;
   flex-direction: column;
   width: 444px;
-  padding-top: 75px;
+  padding-top: 71px;
 }
 
 .footer-menu-list {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  width: calc(100% + 3px);
   gap: 30px;
   margin: 0;
-  margin-bottom: 62px;
+  margin-bottom: 56px;
   padding: 0;
   list-style: none;
 }
@@ -1597,9 +1628,12 @@ body {
 }
 
 .footer-contacts-wrapper {
-  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 239px;
   margin-left: auto;
-  padding-top: 78px;
+  padding-top: 77px;
 }
 
 .footer-contacts-phone {
@@ -1634,12 +1668,16 @@ body {
 /* Breadcrumbs */
 
 .inner-header {
-  margin-bottom: 34px;
+  margin-bottom: 30px;
+}
+
+.inner-header-container {
+  padding-left: 60px;
 }
 
 .inner-header-title {
   margin: 0;
-  margin-bottom: 16px;
+  margin-bottom: 11px;
 }
 
 .breadcrumbs {
@@ -1713,18 +1751,18 @@ body {
   text-transform: uppercase;
   color: #000000;
   margin-top: 25px;
-  margin-bottom: 72px;
+  margin-bottom: 59px;
 }
 
-.filter-catalog-group {
+.filter-catalog-group {/**/
   margin: 0;
-  margin-bottom: 47px;
+  margin-bottom: 33px;/*47px*/
   padding: 0;
   border: none;
 }
 
 .filter-catalog-group:last-of-type {
-  margin-bottom: 35px;
+  margin-bottom: 32px;
 }
 
 .legend-name {
@@ -1735,18 +1773,32 @@ body {
   color: #000000;
   padding: 0;
   padding-top: 12px;
-  margin-bottom: 20px;
+  margin-bottom: 16px;/*20px*/
 }
 
 .legend-name::before {
   position: absolute;
   content: "";
-  top: 0;
+  top: -2px;
   left: 0;
   display: block;
   width: 200px;
   height: 2px;
   background: #000000;
+}
+
+.price {/**/
+  margin-bottom: 28px;
+}
+
+.bluetooth-title {/**/
+  padding-top: 8px;
+}
+
+.bluetooth-title::before {
+  position: absolute;
+  content: "";
+  top: -5px;
 }
 
 .range-scale {
@@ -1842,7 +1894,7 @@ body {
 }
 
 .filter-catalog-item:not(:last-child) {
-  margin-bottom: 17px;
+  margin-bottom: 7px;/*17px;*/
 }
 
 .control {
@@ -1914,7 +1966,7 @@ body {
   border: none;
   font-family: "Raleway", sans-serif;
   line-height: normal;
-
+  padding-left: 9px;
 }
 
 .button-submit:hover {
@@ -1959,6 +2011,7 @@ body {
 
 .sorting-container {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   padding: 20px 40px;
 }
@@ -1972,7 +2025,7 @@ body {
   text-transform: uppercase;
   color: #000000;
   margin: 0;
-  margin-right: 206px;
+  margin-right: auto;
 }
 
 .select-control {
@@ -2044,7 +2097,7 @@ body {
 /* Catalog main */
 
 .catalog-container {
-  padding: 70px 40px 78px 40px;
+  padding: 70px 40px 79px 40px;
   background-color: #ffffff;
 }
 
@@ -2053,7 +2106,7 @@ body {
   grid-template-columns: repeat(2, 360px);
   list-style: none;
   margin: 0;
-  margin-bottom: 44px;
+  margin-bottom: 43px;
   padding: 0;
   gap: 44px 40px;
 }
@@ -2075,7 +2128,7 @@ body {
 }
 
 .product-image {
-  margin-bottom: 32px;
+  margin-bottom: 29px;
 }
 
 .product-text-wrapper {
@@ -2171,8 +2224,9 @@ body {
 .download-button {
   display: block;
   width: 100%;
-  padding: 18px 39px;
-  margin-bottom: 44px;
+  padding: 14px;
+  padding-left: 18px;
+  margin-bottom: 46px;
   font-family: "Raleway", sans-serif;
   text-align: center;
   font-size: 16px;
@@ -2205,6 +2259,7 @@ body {
   align-items: center;
   margin: 0;
   padding: 15px 25px;
+  padding-right: 20px;
   list-style: none;
   background-color: #EBEBEB;
 }
