--- a/styles/styles.css
+++ b/styles/styles.css
@@ -537,14 +537,17 @@ body {
 }
 
 .has-submenu:focus-within .submenu {
-  display: flex;
+  display: grid;
 }
 
 .submenu {
   display: none;
-  flex-direction: column;
+  grid-template-columns: repeat(3, 222px);
+  gap: 2px 10px;
+  padding: 8px 60px 27px 60px;
+  /*flex-direction: column;
   flex-wrap: wrap;
-  gap: 18px 30px;
+  gap: 18px 30px;*/
   position: absolute;
   left: -60px;
   top: 51.5px;
@@ -552,7 +555,7 @@ body {
   width: 1160px;
   height: 162px;
   margin: 0;
-  padding: 15px 60px 27px 60px;
+  /*padding: 15px 60px 27px 60px;*/
   list-style: none;
   background-color: #FFE17F;
 }
@@ -563,12 +566,42 @@ body {
 }
 
 .has-submenu-link:focus-within + .navigation-menu-item-button + .submenu {
-  display: flex;
+  display: grid;
   opacity: 1;
 }
 
 .submenu-item {
   min-width: 210px;
+}
+
+.submenu-virtual {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.submenu-monopod {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.submenu-camera {
+  grid-column: 1;
+  grid-row: 3;
+}
+
+.submenu-fitness {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.submenu-smart-watch {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.submenu-quadcopter {
+  grid-column: 3;
+  grid-row: 1;
 }
 
 .submenu-link:hover {
